v0.0.15 (28 Jan 2014)
  Server: The default request listener now sends ENOENT errors to the client
    when a GET request fails due to an error in the fs.ReadStream (basically
    file not found).

v0.0.14 (27 Jan 2014)
  Server: Added minor validations.
  Server: Minor bugfixes.
  Added "close()".
  
v0.0.13 (26 Jan 2014)
  Server: Deny concurrent PUT requests over the same file.
  Server: The "stats" event is now emitted in a future tick. This allows to
    call the default request listener after the "stats" event and allows to
    create the stream chaining based on the values of the "stats" object.
  Server: Added "setSize()". It must be used with custom request listeners to
    set the size of the response when is a GET request.
  Better maximum size error handling.
  Server: Exposed error codes.
  Server: Now the server doesn't check for initial errors. As soon as a new
    request starts, it creates the streams and emits the "request" event.
  Minor improvements.

v0.0.12 (24 Jan 2014)
  Client: Fixed put stream error handling with empty files.
  Client: Improved maximum size error handling.
  Improved the error checking with DATA and ACK packets.

v0.0.11 (23 Jan 2014)
  Server: Fixed IPv6 socket.

v0.0.10 (22 Jan 2014)
  Allowed error messages with code 0 and no description.

v0.0.9 (21 Jan 2014)
  Client: Added DNS address resolution.
  Added automatic UDP socket type creation (IPv4 or IPv6).
  Renamed "hostname" option to "host".
  Server: When the request is a PUT operation "setUserExtensions()" works
    correctly.

v0.0.8 (21 Jan 2014)
  Server: Allowed aborting a request without calling the default request
    listener.
  Minor internal refactor.

v0.0.7 (20 Jan 2014)
  Bump version.

v0.0.6 (20 Jan 2014)
  Server implemented along with a major refactor of the client.
  Fixed the reception of user extensions sent by the server.
  Added the server setup in the cli script.
  Changed the sockets of the stats object.
  Minor tweaks, checks and bugfixes.
