@@ -99,11 +99,6 @@ Client.prototype.get = function (remote, local, options, cb){
 };
 
 Client.prototype.put = function (local, remote, options, cb){
-  if (arguments.length === 2){
-    cb = remote;
-    remote = path.basename (local);
-  }
-  
   var argsLength = arguments.length;
   if (argsLength === 2){
     cb = remote;
